Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18592

Renaming files when renaming symbol results in funny file name

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 4.4.0-rc1
    • Qt Creator 4.4.0-beta1
    • C/C++/Obj-C++ Support
    • None
    • macOS (case-insensitive file system), Linux
    • c78ea5a7ea7bd7f451d5d3c5fcca4920e942e233

      • Create dummy Qt Widgets project
      • open mainwindow.cpp
      • rename MainWindow to MyMainWindow and check "Rename 2 files"

      Expected:
      The files are renamed to mymainwindow.cpp and .h

      Actual result:
      The files are renamed to myMainwindow.cpp and .h

        For Gerrit Dashboard: QTCREATORBUG-18592
        # Subject Branch Project Status CR V

            aha_1980 André Hartmann
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes